# cross-lingual-detox

./: README.md  pyproject.toml
assets/: actual_sources_of_toxicity.pkl  neuron-activations.pkl
assets/translated_pairwise_data/: dpo_toxicity_pairwise_ar_200.jsonl  dpo_toxicity_pairwise_cs_200.jsonl  dpo_toxicity_pairwise_de_200.jsonl  dpo_toxicity_pairwise_en_200.jsonl  dpo_toxicity_pairwise_es_200.jsonl  dpo_toxicity_pairwise_fr_200.jsonl  dpo_toxicity_pairwise_hi_200.jsonl  dpo_toxicity_pairwise_id_200.jsonl  dpo_toxicity_pairwise_it_200.jsonl  dpo_toxicity_pairwise_ja_200.jsonl  dpo_toxicity_pairwise_ko_200.jsonl  dpo_toxicity_pairwise_nl_200.jsonl  dpo_toxicity_pairwise_pl_200.jsonl  dpo_toxicity_pairwise_pt_200.jsonl  dpo_toxicity_pairwise_ru_200.jsonl  dpo_toxicity_pairwise_sv_200.jsonl  dpo_toxicity_pairwise_zh_200.jsonl
assets/weights/: english-probe.pt
notebooks/: Causal Intervention (Table 4).ipynb  Interpreting Value Vectors.ipynb  Neuron Activation.ipynb  README.md
scripts/: run_collect_neuron_activations.py  run_train_probe.py
xg/: __init__.py  collect_neuron_activations.py  interp.py  probe.py
xg/eval/: metric_diversity.py  metric_perplexity.py  metric_toxicity.py  perspective_api_eval.py
xg/generate/: vllm_script_sample.py
xg/retrieval/: retrieval_acc_load.py  retrieval_acc_save.py
xg/training/: dpo.py  merge_peft.py  probe_trainer.py
