[tool.poetry]
name = "xg"
version = "0.1.0"
description = ""
authors = ["Xiaochen Li <xiaochen_li@brown.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
transformer-lens = "^2.1.0"
trl = "0.8.6"
accelerate = "^0.31.0"
peft = "0.10.0"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
datasets = "^2.20.0"
wandb = "^0.17.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
